#125-Implement-the-connection-with-the-terminology-servers
resolve merge conflict with branch: feature/8_Add_import_and_export_functionality